# sol-memos

./: Cargo.toml  build.rs
memos/: Anchor.toml  Cargo.toml
memos/programs/memos/: Cargo.toml
memos/programs/memos/src/: lib.rs  state.rs
memos/programs/memos/src/instructions/: mod.rs  store_memo.rs
memos/tests/: Cargo.toml
memos/tests/src/: lib.rs  test_store_memo.rs
src/: chain.rs  ctx.rs  main.rs  persist.rs  wrapped.rs
