[package]
name = "metadao"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
anchor-client = { version = "1.0.0", features = ["async"] }
anchor-lang = "1.0.0"
anyhow = "1.0.102"
dotenvy = "0.15.7"
helius = "1.0.1"
tokio = { version = "1.51.0", features = ["full"] }
memos = { path = "./memos/programs/memos" }
shellexpand = "3.1.2"
solana-sdk = "3"
serde_json = "1.0.149"
solana-system-interface = "3.2.0"
tokio-stream = "0.1.18"
solana-transaction-status = "3"
solana-client = "3.1.12"
ratatui = "0.30.0"
crossterm = "0.29.0"
crossbeam-channel = "0.5.15"
redis = { version = "1.2.0", features = ["tokio-rustls-comp", "tls-rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.228", features = ["derive"] }

# For decoding the error messages...
tokio-tungstenite = "0.28.0"
ansi-to-tui = "8.0.1"
arboard = { version =  "3.6.1", features = ["wayland-data-control"] }
pin-project = "1.1.11"
futures = "0.3.32"

[dev-dependencies]


[build-dependencies]
